# tigerhaskell

./: .gitignore  CHANGELOG.md  README.md  TigerHaskell.cabal  tigerhaskell.cabal
Exercises/Ch3/: FirstFollow.hs
compiler/: .#package.yaml  .gitignore  LICENSE  package.yaml  stack.yaml
compiler/src/: AST.hs  DumbParser.hs  Frame.hs  Parser.hs  Registers.hs  STEnv.hs  Semant.hs  Symbol.hs  Temp.hs  TigerDef.hs  Translate.hs  Tree.hs  TypeChecker.hs  Types.hs  grammar.txt
compiler/test/: Spec.hs
compiler/test/Spec/: AppelTigFiles.hs  GenAppelTigFiles.hs  Parser.hs  Semant.hs  Translate.hs  TypeChecker.hs
compiler/test/havm/: Annotation.hs  Code.hs  Config.hs  Config.hs.in  Cpu.hs  Eval.hs  Havm.hs  High.hs  Ir.hs  Level.hs  Location.hs  Low.hs  Memory.hs  Opt.hs  Parse.hs  Parse.y  Plain.hs  Position.hs  Preload.hs  Print.hs  Profile.hs  Report.hs  Result.hs  RunHavm.hs  Runtime.hs  RuntimeChar.hs  RuntimeCommon.hs  RuntimeInput.hs  RuntimeInt.hs  RuntimePrint.hs  RuntimeString.hs  RuntimeSystem.hs  Scan.hs  StdBinop.hs  StdRelop.hs  Token.hs  Trace.hs  VMMonad.hs  havm  local.am
exercises/Ch3/: FirstFollow.hs  grammar.txt  grammar2.txt
old/src/Lexer/: Finite.hs  Types.hs
old/src/Parser/: Grammar.hs  Types.hs
old/test/: Lexer.hs  testcases
src/: AST.hs  DFA.hs  Env.hs  Frame.hs  MyLib.hs  NFA.hs  Parser.hs  Regex.hs  Semant.hs  Symbol.hs  Temp.hs  Translate.hs  Tree.hs  TypeCheck.hs  Types.hs  Util.hs
src/Lexer/: FA.hs  Finite.hs  Lexer.hs  NFA.hs  Regex.hs  Tokens.hs  Types.hs
src/Parser/: Grammar.hs  Parser.hs  Types.hs
test/: Lexer.hs  Parser.hs  ParserTests.hs  SemantTests.hs  Tests.hs  TigerTests.hs  TypeCheckTests.hs  Util.hs
tiger/testcases/error/: test17.tig
