cabal-version:      3.4
name:               tigerhaskell
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE
author:             zfnmxt
maintainer:         zfnmxt@zfnmxt.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common common
  ghc-options: -Wall -Wcompat -Wno-incomplete-uni-patterns -Wno-x-partial -Wno-unrecognised-warning-flags  -Wredundant-constraints -Wincomplete-record-updates -Wmissing-export-lists -Wunused-packages

  default-extensions:
   OverloadedStrings

library
        import:           common
        exposed-modules:
          AST
          Parser

        build-depends:
          base,
          megaparsec,
          text

        hs-source-dirs:   src
        default-language: GHC2021

executable tigerhaskell
        import:           common
        main-is:          Main.hs
        build-depends:
          base,
          tigerhaskell

        hs-source-dirs:   app
        default-language: GHC2021

test-suite tigerhaskell-test
        import:           common
        default-language: GHC2021
        type:             exitcode-stdio-1.0
        hs-source-dirs:   test
        main-is:          Driver.hs
        build-depends:
         base,
         tigerhaskell,
         tasty
        build-tool-depends:
          tasty-discover:tasty-discover
